arreglo de nombre de proyecto en sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=top
-sonar.projectName=top
+sonar.projectKey=tpo
+sonar.projectName=tpo
 sonar.projectVersion=1.0.0
 # sonar.sources=src
 sonar.exclusions=src/utils/constants/*.js, src/lib/**.*, src/assets/**.*, src/registerServiceWorker.js, src/**/*.spec.js, src/**/index.js
