--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,4 +36,4 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_PATH: ./firebase.json 
+          PROJECT_PATH: ../firebase.json 
